<resources>
    <string name="app_name">Clap Phone Finder</string>
    <string name="clap_to_find_your_phone">Clap to find your phone</string>
    <string name="find">Find</string>
    <string name="setting">Setting</string>
    <string name="tap_to_active">Tap to active</string>
    <string name="whistle">Whistle</string>
    <string name="sound">Sound</string>
    <string name="info">Info</string>
    <string name="two_fragment_open_in_this_viewpager_findfragment_settingfragment">Two fragment open in this viewpager (FindFragment, SettingFragment)</string>
    <string name="for_change_viewpager_fragment_position">For change viewpager fragment position</string>
    <string name="press_got_it_button_to_confirm_your_device_find">Press Got It Button to confirm your device find</string>
    <string name="done">Done</string>
    <string name="this_action_contains_ads">( This action can contains ads )</string>
    <string name="flashlight">Flashlight</string>
    <string name="tv_default">Default</string>
    <string name="disco_mode">Disco mode</string>
    <string name="sos_mode">SOS mode</string>
    <string name="vibrate">Vibrate</string>
    <string name="more">More</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello">Hello</string>
    <string name="car_honk">Car honk</string>
    <string name="door_bell">Door bell</string>
    <string name="party_horn">Party horn</string>
    <string name="police_whistle">Police whistle</string>
    <string name="cavalry">Cavalry</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration :</string>
    <string name="apply">Apply</string>
    <string name="loop">Loop</string>
    <string name="_2m">2m</string>
    <string name="_1m">1m</string>
    <string name="_30s">30s</string>
    <string name="_15s">15s</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="italian">Italian</string>
    <string name="indonesia">Indonesia</string>
    <string name="german">German</string>
    <string name="korean">Korean</string>

    <string name="onboarding1">Discover Devices with Ease</string>
    <string name="onboarding2">Device Detect: Unveil the Unseen</string>
    <string name="onboarding3">Echoes of Connectivity</string>

    <string name="onboarding_description_1">Welcome to Device Finder Pro – Your Ultimate Device Discovery Solution!</string>
    <string name="onboarding_description_2">Introducing Device Detect – Redefining How You Discover Devices!</string>
    <string name="onboarding_description_3">Where Connectivity Echoes Louder and Clearer!</string>

</resources>