<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:title="@string/clap_to_find_your_phone"
        app:titleTextAppearance="@style/titleToolbarTextAppearance" />

    <com.example.clapphonefinder.view.viewpager.NonSwipeableViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/two_fragment_open_in_this_viewpager_findfragment_settingfragment"
        app:layout_constraintBottom_toTopOf="@id/bottom_tab_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <com.example.clapphonefinder.view.tablayout.PTabLayout
        android:id="@+id/bottom_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/for_change_viewpager_fragment_position"
        app:selected_tab_bg="@drawable/selected_tab"
        app:selected_tab_text_color="@color/white"
        app:tabBackground="@android:color/transparent"
        app:tabIndicator="@android:color/transparent"
        app:tabRippleColor="@null"
        app:layout_constraintBottom_toTopOf="@id/risingBanner"
        app:unselected_tab_bg="@drawable/unselected_tab"
        app:unselected_tab_text_color="@color/black" />

    <com.app.sdkads.view.RisingBannerView
        android:id="@+id/risingBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/rl_bottom"/>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>